refactored minecraft server functions and added tests for some of them
